fix spacing on mobile for show blade

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11368,7 +11368,7 @@ a {
 
   .attBox {
     margin: 0px;
-    width: 105px;
+    width: 100px;
     padding: 15px;
     font-size: 2.6vw;
   }
